cleanup after kotlin for java 8.